# Rusticubes

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  download_tools.bat  install.bat  install.md  run.bat  text.todo  tools.bat
assets/: rusticubes.manifest  rusticubes.rc
cheat_sheets/: font.txt  func.txt  var.txt
mods/: math.rs  mod_one.rs  mod_two.rs
not used/: 2d_texture.rs  const_comp.rs  font_texture.rs  global_mut.rs  instances.rs  light.wgsl  lut.rs  main.rs  marching_cubes.rs  model.rs  networking.rs  rendering_from_github.rs  resources.rs  texture.rs  ui_test.txt
not used/stuff to make instanced rendering/: geometry.rs  pipeline.rs  texture_shader.wgsl
resources/: chunk_shader.wgsl  debug_shader.wgsl  fxaa.wgsl  inside_shader.wgsl  sky_shader.wgsl  texture_shader.wgsl  ui_shader.wgsl
src/: audio.rs  camera.rs  chunk_shader.wgsl  config.rs  cube.rs  cube_extra.rs  cube_math.rs  cube_render.rs  cube_tables.rs  cursor.rs  debug.rs  event_handler.rs  file_manager.rs  fxaa.wgsl  game.rs  game_state.rs  geometry.rs  input.rs  inside_shader.wgsl  instances.rs  lib.rs  main.rs  math.rs  memory.rs  modding.rs  modding_override.rs  pipeline.rs  player.rs  resources.rs  shader.wgsl  sound.rs  stopwatch.rs  texture.rs  texture_shader.wgsl  time.rs  traits.rs  ui_element.rs  ui_manager.rs  ui_render.rs  ui_setup.rs  (+5 more)
src/block/: entity.rs  extra.rs  lut.rs  main.rs  math.rs  readme.txt  render.rs  storage.rs
src/debug/: binary.rs  json_serial.rs  metadata.rs  network.rs  network_t.rs  physics.rs  readme.txt  serialize_item.rs  world.rs
src/ext/: audio.rs  color.rs  config.rs  memory.rs  mods_over.rs  network.rs  network_api.rs  network_discovery.rs  network_types.rs  ptr.rs  readme.txt  rs.rs  settings.rs  stopwatch.rs  time.rs  timer.rs
src/fs/: binary.rs  fs.rs  json.rs  readme.txt  rs.rs
src/game/: inventory.rs  item_lut.rs  item_serialize.rs  items.rs  material.rs  player.rs  readme.txt  state.rs
src/hs/: binary.rs  cursor.rs  input.rs  math.rs  readme.txt  string.rs  time.rs
src/item/: filter.rs  inventory.rs  item_binary.rs  item_json.rs  item_lut.rs  item_serde.rs  item_serialize.rs  items.rs  material.rs  readme.txt  recipes.rs  serialize.rs  ui_inventory.rs
src/mods/: api.rs  over.rs  readme.txt
src/network/: api.rs  discovery.rs  readme.txt  types.rs
src/not used/: model.rs
src/physic/: aabb.rs  body.rs  readme.txt
src/render/: debug.rs  meshing.rs  pipeline.rs  readme.txt  skybox.rs  texture.rs  world.rs
src/ui/: dialog.rs  element.rs  events.rs  inventory.rs  manager.rs  readme.txt  render.rs  settings.rs  setup.rs  text.rs
src/utils/: click.rs  cursor.rs  input.rs  math.rs  readme.txt  rng.rs  string.rs  vec2.rs  vec3.rs
src/world/: builder.rs  data.rs  handler.rs  main.rs  manager.rs  readme.txt  region.rs  serialize.rs  threading.rs
