[package]
name = "rusticubes"
version = "0.4.8" 
edition = "2024"
authors = ["NukuHack", "nukuhack@gmail.com"] # might not be able to answer too quickly
description = "3D voxel sandbox game"
readme = true
repository = "https://github.com/NukuHack/Rusticubes"
license = "MIT"
keywords = ["gamedev", "graphics"]
include = ["/src", "LICENSE"]
build = "build.rs"


[dependencies]
# core lib for events and other utility stuff
winit = { version = "0.29", features = ["rwh_05"] }
# core lib used to make windows and display stuff on them
wgpu = "24"
# advanced lib for math and extra complex stuff
bytemuck = { version = "1.23", features = [ "derive" ] }
# just the basic math : 3D points vectors rotation etc...
glam = "0.30"
# image load lib
image = { version = "0.25", features = ["png", "jpeg"], default-features = false}
# just to compile the resources
include_dir = "0.7"
# better hash-map access
ahash = "0.8"
# needed to de-compress the files
lz4_flex = "0.11"
# to get the home folder
dirs = "6"
# added this to read the ttf file
rusttype = "0.9"
# needed for neat sound playing
rodio = "0.20"
# networking and routing crates
ggrs = "0.10"
matchbox_socket = "0.7"
# used for serialization and de-serialization
serde = { version = "1", features = ["derive"] }
# used to run external code at runtime -> modding
wasmtime = "14"


[target.'cfg(windows)'.dependencies]
# small lib used for memory clearing
winapi = "0.3"
windows-sys = { version = "0.60", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
walkdir = "2"
lz4_flex = "0.11"
filetime = "0.2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"
windows_exe_info = "0.4"

[package.metadata.windows]
icon = "assets/icon.ico"

[profile.dev]
opt-level = 1       # Light optimizations
incremental = true  # Faster recompiles
codegen-units = 16   # Parallel compilation

[profile.dev.package."*"]
opt-level = 1       # Apply to dependencies too


[profile.release]
opt-level = 3       # Optimize for speed (not size)
incremental = false # Disabled (good for release)
codegen-units = 4   # Balance compile time/optimization
lto = true          # Link-time optimization (good)
panic = "abort"     # Reduces binary size (good)
strip = true        # Removes debug symbols (good)

[profile.release.package."*"]
opt-level = 3       # Apply to dependencies too


